# hf-decoder

./: .gitignore  ARCHITECTURE.docx  ARCHITECTURE.md  CMakeLists.txt  README.md  TODO.md
docs/: DEPENDENCIES.md  hfdecoder.conf
docs/web/: index.html
include/: config.hpp  data_store.hpp  hfdecoder.hpp  logging.hpp  rf_input.hpp  thread_safe_queue.hpp  web_server.hpp
include/dsp/: decode.hpp  demod.hpp  engine.hpp  sync.hpp
include/ft8/: constants.h  crc.h  ldpc.h
scripts/: install_deps_rpi.sh
src/: config.cpp  data_store.cpp  logging.cpp  main.cpp  rf_input.cpp  web_server.cpp
src/dsp/: decode.cpp  demod.cpp  engine.cpp  sync.cpp
src/ft8/: constants.c  crc.c  ldpc.c
tests/: CMakeLists.txt  test_decoder.cpp
